# turtlebot3-autonomous-exploration

./: README.md  exec.sh  run.sh
docker_ws/: Dockerfile.project  build.sh
ros_ws/src/turtlebot3_autonomous_exploration/: package.xml  setup.cfg  setup.py
ros_ws/src/turtlebot3_autonomous_exploration/config/: ekf.yaml  nav2.yaml  slam.yaml
ros_ws/src/turtlebot3_autonomous_exploration/launch/: main.launch.py
ros_ws/src/turtlebot3_autonomous_exploration/rviz/: tb3_main.rviz
ros_ws/src/turtlebot3_autonomous_exploration/turtlebot3_autonomous_exploration/: frontier_detector_node.py  frontier_goal_publisher_node.py
ros_ws/src/turtlebot3_gazebo/: CHANGELOG.rst  package.xml
ros_ws/src/turtlebot3_gazebo/launch/: turtlebot3_custom_house.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_world.launch.py
ros_ws/src/turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml
ros_ws/src/turtlebot3_gazebo/worlds/: custom_house.world  turtlebot3_dqn_stage4.world
