<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_autonomous_exploration</name>
  <version>0.0.0</version>
  <description>Frontier exploration system for TurtleBot3 using SLAM, Nav2 and robot_localization.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

 <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <exec_depend>robot_localization</exec_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
